// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should consume a message from a queue 1`] = `
Object {
  "payload": Object {
    "message": "test",
  },
  "tryTimes": 0,
  "updatedAt": 1,
  "webhook": "https://localhost.com:5003",
}
`;

exports[`should consume a message from a queue 2`] = `
Object {
  "messageCount": 0,
  "queue": "1",
}
`;

exports[`should publish a message to queue 1`] = `
Object {
  "messageCount": 1,
  "queue": "1",
}
`;
